# forge-of-titans

./: .gitmodules  CMakeLists.txt  README.md
assets/shaders/: batch.frag.glsl  batch.vert.glsl  blit.frag.glsl  blit.vert.glsl  frag.glsl  geometry.frag.glsl  text.frag.glsl  vert.glsl
assets/textures/: blacksmith.aseprite  dirt_tile.aseprite  test_character.aseprite  test_character.json  tile404.aseprite
engine/: CMakeLists.txt
engine/include/engine/: renderer.h
engine/src/: engine.c  font.c  renderer.c  utils.c  window.c
include/: assman.h  engine.h  font.h  game.h  graphics.h  profiler.h  renderer.h  tile.h  utils.h  window.h
include/engine/: assman.h  font.h  graphics.h  utils.h  window.h
src/: assman.c  font.c  graphics.c  main.c  profiler.c  renderer.c  utils.c  window.c
src/engine/: assman.c  engine.c  font.c  graphics.c  profiler.c  renderer.c  window.c
tools/: test.c
